// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-boolean"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-boolean"
      disabled={false}
    >
      <div
        className="form-control"
      >
        <input
          className="checkbox"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkbox field with label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-boolean"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-boolean"
      disabled={false}
    >
      <div
        className="form-control"
      >
        <label
          className="label cursor-pointer justify-start"
        >
          <div
            className="mr-2"
          >
            <input
              className="checkbox"
              disabled={false}
              id="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
          </div>
          <span
            className="label-text"
          >
            test
          </span>
        </label>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkbox field with label and description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-boolean"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-boolean"
      disabled={false}
    >
      <div
        className="form-control"
      >
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            test description
          </div>
        </div>
        <label
          className="label cursor-pointer justify-start"
        >
          <div
            className="mr-2"
          >
            <input
              className="checkbox"
              disabled={false}
              id="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
          </div>
          <span
            className="label-text"
          >
            test
          </span>
        </label>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkbox field with label and rich text description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-boolean"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-boolean"
      disabled={false}
    >
      <div
        className="form-control"
      >
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            <span>
              <strong>
                test
              </strong>
               
              <strong>
                description
              </strong>
            </span>
          </div>
        </div>
        <label
          className="label cursor-pointer justify-start"
        >
          <div
            className="mr-2"
          >
            <input
              className="checkbox"
              disabled={false}
              id="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
          </div>
          <span
            className="label-text"
          >
            test
          </span>
        </label>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-array"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-array"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        >
          An enum list rendered as checkboxes
        </span>
      </label>
      <div
        className="form-control"
      >
        <div
          className="flex flex-col gap-2 mt-1"
        >
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="checkbox"
              data-index={0}
              disabled={false}
              id="root-foo"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <span
              className="label-text"
            >
              foo
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="checkbox"
              data-index={1}
              disabled={false}
              id="root-bar"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <span
              className="label-text"
            >
              bar
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="checkbox"
              data-index={2}
              disabled={false}
              id="root-fuzz"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <span
              className="label-text"
            >
              fuzz
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="checkbox"
              data-index={3}
              disabled={false}
              id="root-qux"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <span
              className="label-text"
            >
              qux
            </span>
          </label>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_my-field"
                >
                  <span
                    className="label-text font-medium"
                  >
                    my-field
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_my-field"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      my-field
                    </span>
                  </label>
                  <input
                    aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_my-field"
                    name="root_my-field"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with description in uiSchema 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_my-field"
                >
                  <span
                    className="label-text font-medium"
                  >
                    my-field
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_my-field"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      my-field
                    </span>
                  </label>
                  <input
                    aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_my-field"
                    name="root_my-field"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with markdown description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_my-field"
                >
                  <span
                    className="label-text font-medium"
                  >
                    my-field
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_my-field"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      my-field
                    </span>
                  </label>
                  <input
                    aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_my-field"
                    name="root_my-field"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with markdown description in uiSchema 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_my-field"
                >
                  <span
                    className="label-text font-medium"
                  >
                    my-field
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_my-field"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      my-field
                    </span>
                  </label>
                  <input
                    aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_my-field"
                    name="root_my-field"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="color"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control my-4 w-full relative"
      >
        <div
          className="w-full"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="input input-bordered w-full flex items-center justify-between cursor-pointer "
            id="root"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <span
              className="text-base-content/50"
            />
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-calendar ml-2 h-4 w-4 text-primary"
              data-icon="calendar"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control my-4 w-full relative"
      >
        <div
          className="w-full"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="input input-bordered w-full flex items-center justify-between cursor-pointer "
            id="root"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <span
              className="text-base-content/50"
            />
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-calendar ml-2 h-4 w-4 text-primary"
              data-icon="calendar"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format time 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <input
          className="input input-bordered w-full"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="time"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields help and error display 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="error-list"
  >
    <ul
      className="list-disc list-inside text-red-600"
    >
      <li>
        . an error
      </li>
    </ul>
  </div>
  <div
    className="rjsf-field rjsf-field-string rjsf-field-error"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string rjsf-field-error"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        >
          <li>
            an error
          </li>
        </ul>
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div>
          help me!
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className="rjsf-field rjsf-field-string"
          >
            <div
              className="field-template mb-3 rjsf-field rjsf-field-string"
              disabled={false}
            >
              <label
                className="label"
                htmlFor="root_my-field"
              >
                <span
                  className="label-text font-medium"
                >
                  my-field
                </span>
              </label>
              <input
                id="root_my-field"
                name="root_my-field"
                type="hidden"
                value=""
              />
              <div
                className="rjsf-field-error-template text-red-600"
              >
                <ul
                  className="list-disc list-inside"
                />
              </div>
              <div
                className="rjsf-field-help-template text-gray-500 text-sm"
              >
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-null"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-null"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-number"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-number"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          step="any"
          type="number"
          value={0}
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-number"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-number"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          step="any"
          type="number"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="password"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-boolean"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-boolean"
      disabled={false}
    >
      <div
        className="form-control"
      >
        <div
          className="flex flex-col gap-2 mt-1"
        >
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="radio"
              data-index={0}
              disabled={false}
              id="root-true"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value={true}
            />
            <span
              className="label-text"
            >
              Yes
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="radio"
              data-index={1}
              disabled={false}
              id="root-false"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value={false}
            />
            <span
              className="label-text"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields schema examples 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help root__examples"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          list="root__examples"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <datalist
        id="root__examples"
      >
        <option
          value="Firefox"
        />
        <option
          value="Chrome"
        />
        <option
          value="Opera"
        />
        <option
          value="Vivaldi"
        />
        <option
          value="Safari"
        />
      </datalist>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control w-full"
      >
        <div
          className="dropdown w-full"
        >
          <div
            className="btn btn-outline w-full text-left flex justify-between items-center "
            onBlur={[Function]}
            onFocus={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="truncate"
            />
            <span
              className="ml-2"
            >
              ▼
            </span>
          </div>
          <ul
            className="dropdown-content z-[1] bg-base-100 w-full max-h-60 overflow-auto rounded-box shadow-lg"
          >
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={0}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <span>
                  foo
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={1}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <span>
                  bar
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-array"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-array"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control w-full"
      >
        <div
          className="dropdown w-full"
        >
          <div
            className="btn btn-outline w-full text-left flex justify-between items-center "
            onBlur={[Function]}
            onFocus={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="truncate"
            >
              Select...
            </span>
            <span
              className="ml-2"
            >
              ▼
            </span>
          </div>
          <ul
            className="dropdown-content z-[1] bg-base-100 w-full max-h-60 overflow-auto rounded-box shadow-lg"
          >
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={0}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  foo
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={1}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  bar
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={2}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  fuzz
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={3}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  qux
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice enumDisabled 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-array"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-array"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control w-full"
      >
        <div
          className="dropdown w-full"
        >
          <div
            className="btn btn-outline w-full text-left flex justify-between items-center "
            onBlur={[Function]}
            onFocus={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="truncate"
            >
              Select...
            </span>
            <span
              className="ml-2"
            >
              ▼
            </span>
          </div>
          <ul
            className="dropdown-content z-[1] bg-base-100 w-full max-h-60 overflow-auto rounded-box shadow-lg"
          >
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={0}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  foo
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={1}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  bar
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={2}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  fuzz
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={3}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  qux
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice enumDisabled using checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-array"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-array"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <div
          className="flex flex-col gap-2 mt-1"
        >
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="checkbox"
              data-index={0}
              disabled={false}
              id="root-foo"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <span
              className="label-text"
            >
              foo
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="checkbox"
              data-index={1}
              disabled={false}
              id="root-bar"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <span
              className="label-text"
            >
              bar
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="checkbox"
              data-index={2}
              disabled={false}
              id="root-fuzz"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <span
              className="label-text"
            >
              fuzz
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="checkbox"
              data-index={3}
              disabled={false}
              id="root-qux"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <span
              className="label-text"
            >
              qux
            </span>
          </label>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice formData 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-array"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-array"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control w-full"
      >
        <div
          className="dropdown w-full"
        >
          <div
            className="btn btn-outline w-full text-left flex justify-between items-center "
            onBlur={[Function]}
            onFocus={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="truncate"
            >
              foo, bar
            </span>
            <span
              className="ml-2"
            >
              ▼
            </span>
          </div>
          <ul
            className="dropdown-content z-[1] bg-base-100 w-full max-h-60 overflow-auto rounded-box shadow-lg"
          >
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer bg-primary/10"
              data-value={0}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={true}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  foo
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer bg-primary/10"
              data-value={1}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={true}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  bar
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={2}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  fuzz
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={3}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  qux
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice with labels 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-array"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-array"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control w-full"
      >
        <div
          className="dropdown w-full"
        >
          <div
            className="btn btn-outline w-full text-left flex justify-between items-center "
            onBlur={[Function]}
            onFocus={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="truncate"
            >
              Select...
            </span>
            <span
              className="ml-2"
            >
              ▼
            </span>
          </div>
          <ul
            className="dropdown-content z-[1] bg-base-100 w-full max-h-60 overflow-auto rounded-box shadow-lg"
          >
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={0}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  Blue
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={1}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  Red
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={2}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <input
                  checked={false}
                  className="checkbox checkbox-sm"
                  readOnly={true}
                  type="checkbox"
                />
                <span>
                  Green
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice enumDisabled 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control w-full"
      >
        <div
          className="dropdown w-full"
        >
          <div
            className="btn btn-outline w-full text-left flex justify-between items-center "
            onBlur={[Function]}
            onFocus={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="truncate"
            />
            <span
              className="ml-2"
            >
              ▼
            </span>
          </div>
          <ul
            className="dropdown-content z-[1] bg-base-100 w-full max-h-60 overflow-auto rounded-box shadow-lg"
          >
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={0}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <span>
                  foo
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={1}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <span>
                  bar
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice enumDisabled using radio widget 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <div
          className="flex flex-col gap-2 mt-1"
        >
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="radio"
              data-index={0}
              disabled={false}
              id="root-foo"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="foo"
            />
            <span
              className="label-text"
            >
              foo
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="radio"
              data-index={1}
              disabled={false}
              id="root-bar"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="bar"
            />
            <span
              className="label-text"
            >
              bar
            </span>
          </label>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice form disabled using radio widget 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={true}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <div
          className="flex flex-col gap-2 mt-1"
        >
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="radio"
              data-index={0}
              disabled={true}
              id="root-foo"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="foo"
            />
            <span
              className="label-text"
            >
              foo
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="radio"
              data-index={1}
              disabled={true}
              id="root-bar"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="bar"
            />
            <span
              className="label-text"
            >
              bar
            </span>
          </label>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={true}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice formData 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control w-full"
      >
        <div
          className="dropdown w-full"
        >
          <div
            className="btn btn-outline w-full text-left flex justify-between items-center "
            onBlur={[Function]}
            onFocus={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="truncate"
            >
              bar
            </span>
            <span
              className="ml-2"
            >
              ▼
            </span>
          </div>
          <ul
            className="dropdown-content z-[1] bg-base-100 w-full max-h-60 overflow-auto rounded-box shadow-lg"
          >
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer "
              data-value={0}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <span>
                  foo
                </span>
              </div>
            </li>
            <li
              className="px-4 py-2 hover:bg-base-200 cursor-pointer bg-primary/10"
              data-value={1}
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="flex items-center gap-2"
              >
                <span>
                  bar
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice uiSchema disabled using radio widget 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={true}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <div
          className="flex flex-col gap-2 mt-1"
        >
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="radio"
              data-index={0}
              disabled={true}
              id="root-foo"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="foo"
            />
            <span
              className="label-text"
            >
              foo
            </span>
          </label>
          <label
            className="flex items-center cursor-pointer gap-2"
          >
            <input
              checked={false}
              className="radio"
              data-index={1}
              disabled={true}
              id="root-bar"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="bar"
            />
            <span
              className="label-text"
            >
              bar
            </span>
          </label>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields slider field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-integer"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-integer"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <div
          className="flex items-center"
        >
          <input
            className="range"
            disabled={false}
            id="root"
            max={100}
            min={42}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            step={1}
            type="range"
            value={75}
          />
          <span
            className="label-text ml-4"
          >
            75
          </span>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <input
        className="file-input w-full"
        disabled={false}
        id="root"
        multiple={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="file"
      />
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="email"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="url"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="placeholder"
          type="text"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <textarea
          className="textarea textarea-bordered w-full"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          rows={5}
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields title field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            Titre 1
          </h2>
          <div
            className="divider divider-primary my-0"
          />
        </div>
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_title"
                >
                  <span
                    className="label-text font-medium"
                  >
                    Titre 2
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_title"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      Titre 2
                    </span>
                  </label>
                  <input
                    aria-describedby="root_title__error root_title__description root_title__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_title"
                    name="root_title"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-undefined"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-undefined"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="unsupported-field"
      >
        <p>
          <span>
            Unsupported field schema for field 
            <code>
              root
            </code>
            : 
            <em>
              Unknown field type undefined
            </em>
            .
          </span>
        </p>
        <pre>
          {}
        </pre>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields up/down field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-number"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-number"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="number"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields using custom tagName 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-string"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-string"
      disabled={false}
    >
      <label
        className="label"
        htmlFor="root"
      >
        <span
          className="label-text font-medium"
        />
      </label>
      <div
        className="form-control"
      >
        <label
          className="label hidden"
          htmlFor="root"
          style={
            {
              "display": "none",
            }
          }
        >
          <span
            className="label-text"
          />
        </label>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="input input-bordered"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;
